--- a/app/views/promocodes_days/_day_02.html.erb
+++ b/app/views/promocodes_days/_day_02.html.erb
@@ -8,7 +8,7 @@
     <p><a target="_blank" href="https://amzn.to/2G2WUXd">Monocular Telescope, 12x50 Compact Monocular Scope with Smartphone Mount...</a></p>
     <div class="code_high">
       <p><span>Take <strong>75% off at $59.99</strong> using code:7513GS1D</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -26,7 +26,7 @@
     <p><a target="_blank" href="https://amzn.to/2IqeDe0">120 Inch Projector Screen, Lightimetunnel 16:9 HD Portable Widescreen Foldable Anti-Crease...</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $59.99</strong> using code:70HSVGBH</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -44,7 +44,7 @@
     <p><a target="_blank" href="https://amzn.to/2G6Z6wE">topmeet Upgraded Ankle Pistol Holster,not Ordinary - More Colors and More Sizes</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $14.95</strong> using code:406JW4WX</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -62,7 +62,7 @@
     <p><a target="_blank" href="https://amzn.to/2G2ticl">CREATIVE DESIGN Jewelry Organizer, Travel Jewelry Organizer Storage Bag Holder</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $22.99</strong> using code: 408M6W19</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -80,7 +80,7 @@
     <p><a target="_blank" href="https://amzn.to/2Io7k6p">Utyful Women Pastel Striped Printed Button Down Roll-up Sleeve Loose Blouse Tops</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $17.99</strong> using code:70L9JZYH</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -98,7 +98,7 @@
     <p><a target="_blank" href="https://amzn.to/2IdnAHZ">HOOMIL Case Compatible with Samsung Galaxy S8 Plus</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $12.99</strong> using code:40LOVEU2</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -116,7 +116,7 @@
     <p><a target="_blank" href="https://amzn.to/2G7Vpah">Kitchen Knife Sharpener, 3-Stage Knife Sharpening Tool...</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $9.99</strong> using code:40DFPRAI</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -134,7 +134,7 @@
     <p><a target="_blank" href="https://amzn.to/2G9ZY3U">Upgraded Fireplace Safety Fence Baby Gate/Fence BBQ Pet Metal Fire Gate Baby Play Yard...</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $78.99</strong> using code: 20LEJP6A</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -152,7 +152,7 @@
     <p><a target="_blank" href="https://amzn.to/2IdiqM9">Synthetic Leather Huge Jewelry Box Mirrored Watch Organizer Necklace Ring ...</a></p>
     <div class="code_high">
       <p><span>Take <strong>80% off at $244.99</strong> using code:80H2NYQV</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -170,7 +170,7 @@
     <p><a target="_blank" href="https://amzn.to/2Ip5l1K">Lovinland Play Table Set, Wood Desk & 4 Chairs Set for Kids White</a></p>
     <div class="code_high">
       <p><span>Take <strong>80% off at $529.95</strong> using code:80ETGPMO</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -188,7 +188,7 @@
     <p><a target="_blank" href="https://amzn.to/2D8Yea7">Lovinland Rest Chair Set, 2pcs Single Backrest Chairs for Patio, Pool, Bar, Salon Rattan Sofa Set Black</a></p>
     <div class="code_high">
       <p><span>Take <strong>80% off at $615.95</strong> using code:80TKX4ON</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -206,7 +206,7 @@
     <p><a target="_blank" href="https://amzn.to/2IqAL7V">Tenozek 16 pcs Chair Leg Floor Protectors Non Slip Furniture Pads...</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $13.59</strong> using code:60X34FYS</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -223,7 +223,7 @@
     <p><a target="_blank" href="https://amzn.to/2KpxUPh">OURS Women's Casual Sleeveless Spaghetti Strap V Neck Polka Dot Long Maxi Dresses with Pockets</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $19.99</strong> using code:50SXAOBT</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -241,7 +241,7 @@
     <p><a target="_blank" href="https://amzn.to/2U9huKj">JENN ARDOR Women's Running Shoes Lightweight Slip-On Breathable Mesh Work Sneakers Athletic Sports Walking Shoes</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $46.95</strong> using code:40QV86VG</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -259,7 +259,7 @@
     <p><a target="_blank" href="https://amzn.to/2G5njU7">Nailyhome Women's Solid Slim Fit Crewneck Long Sleeve Thumb Hole Shirt Basic Shirts Tops</a></p>
     <div class="code_high">
       <p><span>Take <strong>65% off at $24.99</strong> using code:65RHTE9R</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -277,7 +277,7 @@
     <p><a target="_blank" href="https://amzn.to/2G36JEo">BUREI Women's Elegant Analog Quartz Wrist Watches Diamond Bezel with Ceramic Bracelet</a></p>
     <div class="code_high">
       <p><span>Take <strong>79% off at $35.99</strong> using code:79X9K8U5</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -294,7 +294,7 @@
     <p><a target="_blank" href="https://amzn.to/2Ip8O07">KEDSUM Meal Prep Containers [30 Pack] 3 Compartments with Lids, Food Containers, Bento Boxes </a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $16.99</strong> using code:30MB4X18</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -311,7 +311,7 @@
     <p><a target="_blank" href="https://amzn.to/2Kp2XL1">COOFANDY Men's Embroidered Western Shirts Sequin Long Sleeve Fashion Button Down Shirt</a></p>
     <div class="code_high">
       <p><span>Take <strong>75% off at $32.99</strong> using code:75MNHU4S</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -328,7 +328,7 @@
     <p><a target="_blank" href="https://amzn.to/2WUptwC">Vegetable Potato Peeler Apple Slicer-Magic Vegetable Peeler</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $9.99</strong> using code:50L2T4U1</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -345,7 +345,7 @@
     <p><a target="_blank" href="https://amzn.to/2G5r2kI">Babyltrl Dog Seat Covers, Pet Car Seat Cover with Mesh Window</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $19.59</strong> using code:20RICFI5</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -362,7 +362,7 @@
     <p><a target="_blank" href="https://amzn.to/2IcDzWM">NWNW Waist Trimmer Belt for Women Men, Adjustable Exercise Band Sweating Fitness Belt...</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $19.99</strong> using code:408STNBE</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -379,7 +379,7 @@
     <p><a target="_blank" href="https://amzn.to/2U5u1P2">NANW Compatible Fitbit Versa Lite Edition Charger/Versa Charger (2-Pack), USB Replacement Charging Cable...</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $7.59</strong> using code:promo_code</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -396,7 +396,7 @@
     <p><a target="_blank" href="https://amzn.to/2G5oNxF">AKIXNO Wall Mountable Sound Bars for TV Sound Bar</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $63.99</strong> using code:5046OED8</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
