--- a/app/views/promocodes_days/_day_03.html.erb
+++ b/app/views/promocodes_days/_day_03.html.erb
@@ -7,7 +7,7 @@
     <p><a target="_blank" href="https://amzn.to/2KNjLvA">SkyGenius Rainfall Fixed Shower Head</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $14.99</strong> using code:40MIFS1W</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -24,7 +24,7 @@
     <p><a target="_blank" href="https://amzn.to/2DgJS7E">Binwo Super Bright 2000 Lumen XML T6 LED Tactical Flashlight Zoomable Adjustable Focus 5 Modes Water Resistant Torch Light for Outdoor Sports</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $25.99</strong> using code:50RSAAA7</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -41,7 +41,7 @@
     <p><a target="_blank" href="https://amzn.to/2UAeT1c">STYLEWORD Women's Cold Shoulder Long Sleeves Casual Tunic Tops for Leggings</a></p>
     <div class="code_high">
       <p><span>Take <strong>67% off at $25.88</strong> using code:67RA5BV5</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -58,7 +58,7 @@
     <p><a target="_blank" href="https://amzn.to/2DcZb1i">ZESICA Women's Summer Floral Printed Short Sleeve Asymmetrical Loose Tunic Blouse Tops</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $26.99</strong> using code:501KZH2O</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -75,7 +75,7 @@
     <p><a target="_blank" href="https://amzn.to/2X8ZQYY">Ctronics WiFi Camera Outdoor, 1080P Wireless Security IP Camera with 110°Wide View</a></p>
     <div class="code_high">
       <p><span>Take <strong>45% off at $66.99</strong> using code:45539Y2Q</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -92,7 +92,7 @@
     <p><a target="_blank" href="https://amzn.to/2DgAfpB">JOUSEN Men's Dress Shoes Leather Brogue Oxford Wingtip Casual Shoes</a></p>
     <div class="code_high">
       <p><span>Take <strong>35% off at $42.99</strong> using code:359ATVKK</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -109,7 +109,7 @@
     <p><a target="_blank" href="https://amzn.to/2DfhAdE">BRIMAX 240W Outdoor Dimmer Plug Switch For G40/S14 Led String Light</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $22.99</strong> using code:501IT9RU</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -126,7 +126,7 @@
     <p><a target="_blank" href="https://amzn.to/2DdYZyX">HD Professional Low Light Vision Binoculars for Bird Watching Travel Hunting Sports Concerts- BAK4 Prism FMC Lens with Strap Carrying Bag</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $38.99</strong> using code:40T4GDU1</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -143,7 +143,7 @@
     <p><a target="_blank" href="https://amzn.to/2XhzB2N">Bruno Marc Men's Rivera Oxfords Shoes SneakersBruno Marc Men's Rivera Oxfords Shoes Sneakers</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $26.99</strong> using code:20SJN42B</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -160,7 +160,7 @@
     <p><a target="_blank" href="https://amzn.to/2XbAKJd">PFFY 360 Degree Rotating Makeup Organizer Make Up Organizers</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $33.95</strong> using code:604KWRE7</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -177,7 +177,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZdLfxq">MIDOSOO Womens Short Sleeve Pleated Loose Swing Casual Knee Length Dress with PocketsMIDOSOO Womens Short Sleeve Pleated Loose Swing Casual Knee Length Dress with Pockets</a></p>
     <div class="code_high">
       <p><span>Take <strong>18.99% off at $18.99</strong> using code:30B4AO14</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -194,7 +194,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZdM49u">Verdusa Women's Batwing Sleeve Sweaters Jumper Eyelash Lace Pullover TopsVerdusa Women's Batwing Sleeve Sweaters Jumper Eyelash Lace Pullover Tops</a></p>
     <div class="code_high">
       <p><span>Take <strong>80% off at $23.59</strong> using code:80OGCN8P</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -211,7 +211,7 @@
     <p><a target="_blank" href="https://amzn.to/2De6gP3">NEILDEN DIY 5D Diamond Painting by Number Kit for Adult</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $12.99</strong> using code:50MEJDUU</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -228,7 +228,7 @@
     <p><a target="_blank" href="https://amzn.to/2DegdMu">Roll over image to zoom inZastone Mini Walkie Talkies 2W 16-Channel UHF 400-470 mhz Handheld Long Range Two-Way Radio Silver 1 pc</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $20.99</strong> using code:50CG7SRQ</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -245,7 +245,7 @@
     <p><a target="_blank" href="https://amzn.to/2DezXzr">Halife Women's Casual Christmas Holiday Reindeer Snowflake Letter Printed Raglan Long Sleeve T Shirt...</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $15.99</strong> using code:70KCUVO6</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -262,7 +262,7 @@
     <p><a target="_blank" href="https://amzn.to/2Dczyxw">Wireless Security Camera, Meisort 1080P WiFi Home Security Camera for Baby/Elder/Pet/Nanny Monitor</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $32.99</strong> using code:40ODX1ZS</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -279,7 +279,7 @@
     <p><a target="_blank" href="https://amzn.to/2DfjPxA">MEISORT USB Mini Super-bright Rechargeable Flashlight</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $8.99</strong> using code:50J3R6WQ</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -296,7 +296,7 @@
     <p><a target="_blank" href="https://amzn.to/2X7nhlw">osture Brace with Magic Sticker Adjustable Back Straightener Back Brace for Back Pain Relief Comfortable...</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $16.99</strong> using code:20CNZMFJ</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -313,7 +313,7 @@
     <p><a target="_blank" href="https://amzn.to/2X7t0rE">NANW Compatible Fitbit Charge 3 Charger Dock Stand Station</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $11.59</strong> using code:303HXQWN</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -330,7 +330,7 @@
     <p><a target="_blank" href="https://amzn.to/2XaRekI">Solar Globe Bulb Lights, Outdoor Waterproof 11.5ft 10 LED Clear Plastic Solar Powered Christmas Bulbs Lights</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $13.99</strong> using code:509LLBQB</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -347,7 +347,7 @@
     <p><a target="_blank" href="https://amzn.to/2Dg41eb">Solar Outdoor String Light 30LED 20ft Water Drop Fairy String Lights </a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $16.99</strong> using code:509LLBQB</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -364,7 +364,7 @@
     <p><a target="_blank" href="https://amzn.to/2KG2tQN">30 LED 20ft Crystal Ball Waterproof Outdoor Fairy String Lights Solar Powered Christmas Decoration Lights</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $17.99</strong> using code:509LLBQB</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -381,7 +381,7 @@
     <p><a target="_blank" href="https://amzn.to/2KEQUtg">SZLTZK 3D Night Light for Kids Baby (Velociraptor)</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $18.88</strong> using code:60ZKBDS5</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -398,7 +398,7 @@
     <p><a target="_blank" href="https://amzn.to/2Dd1d1q">udiag OBD2 Scanner OBD Car Diagnostic Tool Obdii Scanners </a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $26.99</strong> using code:303UUSBG</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -415,7 +415,7 @@
     <p><a target="_blank" href="https://amzn.to/2DfYR1P">Laminator Machine for A3/A4/A6, YE381 Thermal Laminating Machine</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $75.99</strong> using code:4055ZFG6</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -432,7 +432,7 @@
     <p><a target="_blank" href="https://amzn.to/2IxWeM7">WooHoo Toys Children Pink Princess Castle Playhouse Play Tent For Girls</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $26.95</strong> using code:50KQHZLV</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -449,7 +449,7 @@
     <p><a target="_blank" href="https://amzn.to/2Gf6F4t">YESHOME 3 Piece Quilt Set Diamond Pattern Quilt Lightweight Soft All Season Bedspread Coverlet</a></p>
     <div class="code_high">
       <p><span>Take <strong>11% off at $40.99</strong> using code:11EDFCON</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -466,7 +466,7 @@
     <p><a target="_blank" href="https://amzn.to/2ZcuvXl">HLTPRO Silicone Ring for Men and Women - 5/8 Pack Wedding Rubber Bands - Width 8mm for Sports, Outdoor</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $4.99</strong> using code:40PHGCD1</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -483,7 +483,7 @@
     <p><a target="_blank" href="https://amzn.to/2De7LNb">diig Women Button Down Shirt, Long Sleeve Uniform Cotton Dress Shirts for Women Work</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $22.99</strong> using code:40V6ZAFI</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -500,7 +500,7 @@
     <p><a target="_blank" href="https://amzn.to/2DcYANa">MDC Womens Minimalist Ultra Thin Leather Slim Watch Dress Casual Classic Simple Wrist Watches for Lady</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $24.99</strong> using code:50MD016GDL</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -517,7 +517,7 @@
     <p><a target="_blank" href="https://amzn.to/2GnRDec">GB-Tech Upgraded Professional Adjustable Desktop Microphone Suspension Boom Scissor Arm Stand Holder</a></p>
     <div class="code_high">
       <p><span>Take <strong>6% off at $14.86</strong> using code:06K1PJXU</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -534,7 +534,7 @@
     <p><a target="_blank" href="https://amzn.to/2DhWbAS">Flend Premium Quality False Eyelashes, 1 Pair Reusable 3D Fake Eyelashes with 1 Tweezer</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $17.99</strong> using code:60AESSI6</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -551,7 +551,7 @@
     <p><a target="_blank" href="https://amzn.to/2XhGiBX">Cornmi iPhone XR Case,Retro PU Leather Wallet Folio Flip Case</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $17.99</strong> using code:30Y5SXBH</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -568,7 +568,7 @@
     <p><a target="_blank" href="https://amzn.to/2DhWo78">Food Cooking Thermometer with Digital Meat Thermometer for Kitchen</a></p>
     <div class="code_high">
       <p><span>Take <strong>56% off at $14.99</strong> using code:56FYZ68P</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -585,7 +585,7 @@
     <p><a target="_blank" href="https://amzn.to/2KEJXII">prodULAK iPhone 8 Plus Case, iPhone 7 Plus Wallet Case,Floral PU Leather Wallet Case...</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $10.99</strong> using code:15V5A3T8</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -602,7 +602,7 @@
     <p><a target="_blank" href="https://amzn.to/2Xeq24t">BNCHI 2 in 1 Aluminum Alloy Phone Wireless Charger Stand & Charging Station</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $43.96</strong> using code:40ZJVGLA</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
@@ -619,7 +619,7 @@
     <p><a target="_blank" href="https://amzn.to/2XffsdK">AICOK Electric Meat Grinder, Stainless Steel Meat Mincer & Sausage Stuffer,</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $66.99</strong> using code:20284U8D</span></p>
-      <em>*Pricing may change or expire at anytime.</em>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn">
