--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -41,7 +41,7 @@
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:10px;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
-  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;}
+  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
   .codes .card_wrap .card .deal_btn{float:left;width:13%;text-align:center;margin:35px 1.5% 0 1.5%;border:1px solid #616161;padding:10px 0;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;display:block;font-family: 'Montserrat', sans-serif;}
 }
@@ -66,7 +66,7 @@
   .codes .rt_cnt .sort_box ul li{float:left;width:19%;margin:0.5%;}
   .codes .rt_cnt .sort_box ul li a{border-radius:10px;text-decoration:none;color:#fff;display:block;background:#000;text-align:center;padding:5px;}
  
-  .codes .card_wrap{column-width:170px;column-gap:5px;}
+  .codes .card_wrap{/*column-width:170px;*/column-gap:5px;column-count:1;}
   .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
   .codes .card_wrap .card .image_box img{width:100%;}
   .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
@@ -76,6 +76,7 @@
   .codes .card_wrap .card .inner>p>a{font-size:13px;line-height:1.4;height:auto;overflow:visible;margin:10px 0 0 0;text-decoration:none;color:#000;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
+  .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:10px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
