--- a/app/views/deals/coupons.html.erb
+++ b/app/views/deals/coupons.html.erb
@@ -6,7 +6,7 @@
   <div class="coupons common_layout clearfix">
     <div class="wrap">
       <div class="lt_cnt">
-        <h2>Coupons</h2>
+        <h2>Sales&Coupons</h2>
 
         
         <div class="note">
@@ -24,7 +24,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Coupons on Amazon</h2>
+        <h2>Sales&Coupons on Amazon</h2>
         
         <div class="cnt_box">
           <div id="buttons"></div>
