--- a/app/views/promocodes_days/day_04.html.erb
+++ b/app/views/promocodes_days/day_04.html.erb
@@ -8,7 +8,7 @@
         <div class="lt_cnt">
           <h2>Promotion Codes</h2>
           
-         <div class="toggle">
+          <div class="toggle">
             <ul>
               <li>
                 <a href="#n">NOTES</a>
@@ -35,11 +35,17 @@
                   <li><a href="/promocodes_days/day_03">Apr. 22. 2019</a></li>
                   <li><a href="/promocodes_days/day_02">Apr. 21. 2019</a></li>
                   <li><a href="/promocodes_days/day_01">Apr. 20. 2019</a></li>
+                  <!-- <li><a href="#n">Feb. 06. 2019</a></li> -->
+                  <!-- <li><a href="#n">Feb. 05. 2019</a></li> -->
+                  <!-- <li><a href="#n">Feb. 04. 2019</a></li> -->
                 </ul>
               </li>
             </ul>
+
           </div><!--./toggle-->
-          
+          <div class="today_code">
+           <a href="/deals/promo_codes">Today's PromoCodes</a>
+          </div>
           
           <div class="lt_sort_box clearfix">
             <ul class="clearfix">
@@ -55,7 +61,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promo Codes on Amazon 2019</h2>
+          <h2>Apr. 23. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -69,7 +75,7 @@
           
          
           <div class="card_wrap sort-list">
-            <%= render 'deals/body_promocode' %>
+            <%= render 'promocodes_days/day_04' %>
           </div>
           
         </div><!--./rt_cnt-->    
