--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -31,10 +31,7 @@
               <li>
                 <a href="#n">LAST 7 DAYS CODES LIST</a>
                 <ul>
-                  <li><a href="/promocodes_days/day_04">Apr. 23. 2019</a></li>
-                  <li><a href="/promocodes_days/day_03">Apr. 22. 2019</a></li>
-                  <li><a href="/promocodes_days/day_02">Apr. 21. 2019</a></li>
-                  <li><a href="/promocodes_days/day_01">Apr. 20. 2019</a></li>
+                  <%= render 'shared/promocodes_days' %>
                 </ul>
               </li>
             </ul>
