--- a/app/views/promocodes_days/day_01.html.erb
+++ b/app/views/promocodes_days/day_01.html.erb
@@ -31,15 +31,7 @@
               <li>
                 <a href="#n">LAST 7 DAYS CODES LIST</a>
                 <ul>
-                  <li><a href="/promocodes_days/day_04">Apr. 23. 2019</a></li>
-                  <li><a href="/promocodes_days/day_03">Apr. 22. 2019</a></li>
-                  <li><a href="/promocodes_days/day_02">Apr. 21. 2019</a></li>
-                  <li><a href="/promocodes_days/day_01">Apr. 20. 2019</a></li>
-                  <!-- <li><a href="#n">Feb. 08. 2019</a></li> -->
-                  <!-- <li><a href="#n">Feb. 07. 2019</a></li> -->
-                  <!-- <li><a href="#n">Feb. 06. 2019</a></li> -->
-                  <!-- <li><a href="#n">Feb. 05. 2019</a></li> -->
-                  <!-- <li><a href="#n">Feb. 04. 2019</a></li>  -->
+                  <%= render 'shared/promocodes_days' %>
                 </ul>
               </li>
             </ul>
@@ -63,7 +55,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Apr. 20. 2019</h2>
+          <h2>Apr. 19. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
